--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.application.name=ParkingProject
 
 server.port=9090
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/artem
+spring.datasource.username=postgres
+spring.datasource.password=nix1909
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# This will create table automatically in your database
+spring.jpa.hibernate.ddl-auto=update
